# semg-protocol-sensitivity

./: .gitignore  .pre-commit-config.yaml  AGENT.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  REPORT.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
artifacts/: README.md
configs/: README.md
configs/experiments/: protocol_sensitivity_semg_cnn.yml
configs/profiles/: bench.yaml  colab_quickstart.yaml  dev_mini.yaml  dry_run.yaml  full_part1.yaml  full_part2.yaml  smoke.yaml
data/: README.md
docs/: REPRODUCIBILITY.md
notebooks/: 00_colab_quickstart.ipynb
reports/: README.md
tests/: test_cli_bench_estimate.py  test_cli_dev_mini.py  test_cli_run_smoke.py  test_datamodule_normalization.py  test_label_mapping.py  test_metrics.py  test_model_forward.py  test_parallel_runs.py  test_split_invariants.py  test_splits.py  test_windowing.py
tests/fixtures/: tiny_windows_subject1_2.npz
tinyml_semg_classifier/: cli.py  config.py  sizing.py
tinyml_semg_classifier/datasets/: datamodule.py  manifest.py  preprocess.py  signal_processing.py
tinyml_semg_classifier/datasets/ninapro_db2/: __init__.py  download.py  load_raw.py  windowing.py
tinyml_semg_classifier/eval/: efficiency.py  predict.py
tinyml_semg_classifier/models/: __init__.py  attention.py  blocks.py  registry.py  st_cnn_gn.py
tinyml_semg_classifier/reporting/: compare.py  plots.py
tinyml_semg_classifier/training/: checkpointing.py  loop.py  metrics.py  optim.py  parallel.py  seed.py  step.py
tinyml_semg_classifier/utils/: hashing.py  io.py  logging.py
(+5 files in other folders)
